applications/vault/vaultns.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/part-of: Hashicorp
  name: vault
