applications/vault/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault
  annotations:
    cert-manager.io/issuer: "vault-issuer"
    cert-manager.io/common-name: "vault"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "521"
    cert-manager.io/duration: "216h"
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      hostname: vault.hell.local
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: vault.hell.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls
