applications/vault/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/issuer: "vault-issuer"
    cert-manager.io/common-name: "vault"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "521"
    cert-manager.io/duration: "216h"
spec:
  gatewayClassName: nginx
  listeners:
    - name: http-v
      hostname: vault.hell.local
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-v
      hostname: vault.hell.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls
    - name: http-k
      hostname: kuard.hell.local
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-k
      hostname: kuard.hell.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: kuard
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
  - name: vault
  hostnames:
  - "vault.hell.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault-active
      port: 8200
