applications/vault/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/issuer: "vault-issuer"
    cert-manager.io/common-name: "vault"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "521"
    cert-manager.io/duration: "30d"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jupiter.hell.local
    secretName: vault-tls
  rules:
  - host: jupiter.hell.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port:
              number: 7443
